# yatruckmp-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: errors.rs  game.rs  main.rs
src/cmd/: kill.rs  mod.rs  mod_version.rs  run.rs  update.rs
src/cmd/game/: mod.rs  server.rs
wix/: main.wxs
