[package]
name = "truck-cli"
authors = ["moonbeeper <moonbeeper@duck.com>"]
description = "a pretty simple cli for launching truckersmp compatible games"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["cargo", "derive"] }
color-print = "0.3.7"
futures-util = "0.3.31"
indicatif = "0.18.0"
md5 = "0.8.0"
nu-ansi-term = "0.50.1"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["gzip", "json", "stream", "zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
steamworks = "0.12.2"
sysinfo = "0.36.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs"] }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[profile.release-lto]
inherits = "release"
lto = "fat"
debug = false
strip = true
